--- a/css/main.css
+++ b/css/main.css
@@ -363,3 +363,359 @@ textarea:focus {
 .submitButton:focus {
 	color: white;
 }
+
+
+/* CSS for 3D model showcase */
+
+body {
+    font-family: 'Roboto', 'Open Sans', "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    color: hsl(213, 5%, 35%);
+    margin: 0px;
+    letter-spacing: 0;
+}
+article, 
+/*.articleContainer, */
+.additionalOptionsContainer {
+    display: grid;
+}
+
+article {
+    margin: 0 auto;
+    margin-top: 30px;
+    margin-left: 30px;
+    margin-right:30px;
+    margin-bottom:20px;
+    /*max-width:1000px;*/
+    /*min-width:500px;*/
+    box-shadow: 0px 0px 25px #aaa;
+}
+
+.clickable {
+    cursor: pointer;
+}
+
+.articleContainer {
+    display:flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-content: space-around;
+}
+
+@media only screen and (min-width: 1000px) {
+    .articleContainer {
+        flex-flow: row;
+    }
+}
+
+.defautViewer3D {
+    grid-column: 1 / 2;
+    grid-row:1;
+    flex-grow:1;
+    flex-basis: 50%;
+    background-color: rgb(214,211,202);
+    /*border-radius: 3px;
+    box-shadow: 0px 1px 5px #222;*/
+    /*height:500px;*/
+    position:relative;
+    /*width: 500px;*/
+    /*min-width:500px;*/
+    /*overflow: hidden;*/
+}
+
+.fullscreenViewer3d {
+    position:absolute;
+    top:0px;
+    left:0px;
+    background-color: #000;
+    /*border-radius: 3px;
+    box-shadow: 0px 1px 5px #222;*/
+    height:100%;
+    /*width: 100%;*/
+    min-width:500px;
+    overflow-x:hidden;
+
+}
+
+.articleContainer {
+    width:100%;
+}
+.additionalOptionsContainer {
+    display:flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-content: space-around;
+}
+
+.additionalOptionsContainer {
+    background-color: #eee;
+    padding-top:10px;
+    padding-left:10px;
+    padding-right:10px;
+    width:calc(100% - 20px);
+    overflow:hidden;
+}
+
+.additionalOptionsContainer img {
+    box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
+    width: 100px;
+    height:100px;
+    margin-right:10px;
+    /*padding-right:10px;*/
+    margin-bottom:10px;
+    transition: 0.05s ease-in-out;
+}
+
+.additionalOptionsContainer img:hover {
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.8);
+}
+
+ul.specs {
+    list-style-type: none;
+    padding-left:0px;
+    display:flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    /*max-height: 275px;*/
+    height: 300px;
+}
+
+ul.specs li {
+    padding-bottom:20px;
+    min-width: 150px;
+}
+ul.specs li hr {
+    border-top: 1px solid;
+    border-bottom:0px;
+    margin-top:0px;
+    min-width:30%;
+    margin-left:0px;
+}
+
+#closeBtn {
+
+}
+
+.arrow {
+    border: solid black;
+    border-width: 0 5px 5px 0;
+    display: inline-block;
+    padding: 15px;
+    border-radius: 5px;
+    transition: opacity 0.2s;
+}
+
+#nextBtn {
+
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+}
+
+#nextBtnWrapper {
+    position:absolute;
+    top: 40%;
+    right:0px;
+    padding:20px;
+    padding-top:50px;
+    padding-bottom:50px;
+    padding-right:30px;
+    opacity: 0.2;
+    transition: 0.2s ease-in-out;
+    height:40px;
+    width:40px;
+    z-index:3;
+}
+
+#nextBtnWrapper:hover {
+    filter:invert(100%);
+    opacity: 0.7;
+}
+
+#previousBtn {
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+}
+#previousBtnWrapper {
+    position:absolute;
+    top: 40%;
+    left:0px;
+    padding:20px;
+    padding-top:50px;
+    padding-bottom:50px;
+    padding-left:30px;
+    opacity: 0.2;
+    transition: 0.2s ease-in-out;
+    height:40px;
+    width:40px;
+    z-index:3;
+}
+
+#previousBtnWrapper:hover {
+    filter:invert(100%);
+    opacity: 0.7;
+}
+
+#fullscreenBtn {
+    position: absolute;
+    right:0px;
+    bottom:0px;
+    height:32px;
+    width:32px;
+    padding:5px;
+    background-image: url(../images/fullscreen32.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    filter: invert(10%);
+    transition: filter 0.1s ease-in-out;
+    background-color: white;
+    opacity: 0.6;
+    z-index:2;
+}
+#fullscreenBtn:hover {
+    filter: invert(90%);
+}
+
+#iteminformation {
+    flex-grow:1;
+    flex-basis: 50%;
+    background: #fafafa;
+    /*height: 480px;*/
+    padding:20px;
+    padding-top:0px;
+    grid-column: 2 / 2;
+    grid-row:1;
+    /*width: 460px;*/
+}
+#iteminformation h1 {
+    text-align: center;
+}
+
+#purchaseInformation {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.price {
+    font-size: 32px;
+    text-align: right;
+    padding-right:20px;
+}
+
+#btnBuy {
+    right:0px;
+    
+    min-width: 60px;
+    background-color:rgb(49, 127, 230);
+    border-radius: 10px;
+    color:white;
+    padding:15px;
+}
+
+#loadBtn {
+    background-color: #ddd;
+    box-shadow: 0px 0px 5px rgba(0,0,0, 0.2);
+    border-radius: 3px;
+    cursor: pointer;
+    margin:0 auto;
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding-top:25px;
+    position:absolute;
+    top:40%;
+    width: 150px;
+    height:50px;
+    transition: 0.15s ease-in-out;
+    z-index:4;
+    margin-left: auto;
+    margin-right: auto;
+    left:0;
+    right:0;
+}
+
+#loadBtn:hover {
+    box-shadow: 1px 0px 5px rgba(255,255,255, 0.5);
+    filter: invert(100%);
+}
+
+#loadingBar {
+    position:absolute;
+    bottom:0px;
+    background-color:rgb(49, 127, 230);
+    height: 5px;
+    width: 0%;/*calc(100% - 32px - 10px);*/
+    transition: width 0.4s ease-out;
+}
+
+#viewerImg img {
+    position: absolute;
+    top:0px;
+    left:0px;
+    height: auto;
+    width: 100%;
+    z-index:1;
+}
+
+model-viewer{
+	height: 100%;
+	width: 100%;
+    position: absolute;
+    top:0px;
+    left:0px;
+    display:block;
+}
+
+#loadingSpinner{
+    opacity: 0;
+    position:absolute;
+    left:0;
+    right:0;
+    margin:0 auto;
+    top:30%;
+    width: 80px;
+    z-index: 3;
+  }
+#loadingSpinner:after {
+    animation: lds-dual-ring 2.5s linear infinite;
+    /*box-shadow: 0px 0px 2px #000;*/
+    position: absolute;
+    content: " ";
+    display: block;
+    width: 64px;
+    height: 64px;
+    margin: 8px;
+    border-radius: 50%;
+    border: 6px solid #fff;
+    border-color: #fff transparent #fff transparent;
+}
+.fadeIn {
+    animation: fadein 0.3s linear;
+}
+
+.fadeOut {
+    animation: fadeout 0.3s linear;
+}
+
+@keyframes fadein {
+    0% {opacity: 0;}
+    100% { opacity: 1;}
+}
+
+@keyframes fadeout {
+    100% {opacity: 0;}
+    0% { opacity: 1;}
+}
+
+@keyframes lds-dual-ring {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
